# webscraping

./: README.md
js_scrap/: index.html  javascript.js  server.js
node_scrap/: node.js  package-lock.json  package.json
python_scrap/: pyproject.toml  scrap.py
