[tool.poetry]
name = "webscrapping"
version = "0.1.0"
description = ""
authors = ["jacobadev <junior1232131@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
parsel = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
